# CRP

./: .gitignore  CMakeLists.txt  Makefile  README.md  WrapCRP.h  crp.pc.in
.github/workflows/: build.yml
XXRounder/: RounderCtrl.cpp  RounderCtrl.h  XXRounder.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: Versioninfo.rc  WrapCRP.c  WrapCRP.h  crpCaudit.c  crpCmain.c  crpSaudit.c  crpSmain.c  crpXaudit.c  crpXmain.c  crpdefns.h  crpglob.h  crpmain.h  exact.c
